# very-bot

./: meson.build  veryyes.cpp
